Switch and Integer, Boolean, Long constructors bugs